Add css structure; update html with main divs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Odin Calculator</title>
 </head>
 <body>
+    <div class="container">
+        <div class="main-screen"></div>
+        <div calss="wrapper">
+            
+        </div>
+
+    </div>
     
 
     <script src="/main.js"></script>
