--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Odin Calculator</title>
 </head>
 <body>
+    
+    <h1>Odin Calculator</h1>
+
     <div class="container">
         <div class="main-screen"></div>
         <div calss="wrapper">
-            
+
         </div>
 
     </div>
