--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <title>Odin Calculator</title>
 </head>
 <body>
-    
+
     <h1>Odin Calculator</h1>
 
     <div class="container">
         <div class="main-screen"></div>
-        <div calss="wrapper">
+        <div class="wrapper">
 
         </div>
 
