--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
     <div class="container">
         <div class="main-screen"></div>
-        <div class="wrapper">
+        
+        <div class="key-wrapper">
 
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operator" value="-">-</button>
