Apply grid elements to individual buttons and arrange appropriately to fill blank space

--- a/index.html
+++ b/index.html
@@ -16,32 +16,30 @@
         
         <div class="key-wrapper">
 
-            <button type="button" class="operator" value="+">+</button>
-            <button type="button" class="operator" value="-">-</button>
-            <button type="button" class="operator" value="*">*</button>
-            <button type="button" class="operator" value="/">/</button>
+            <button type="button" class="operator ac-sign" value="AC">AC</button>
 
-            <button type="button" class="operator" value="1">1</button>
-            <button type="button" class="operator" value="2">2</button>
-            <button type="button" class="operator" value="3">3</button>
-            <button type="button" class="operator" value="4">4</button>
-            <button type="button" class="operator" value="5">5</button>
-            <button type="button" class="operator" value="6">6</button>
-            <button type="button" class="operator" value="7">7</button>
-            <button type="button" class="operator" value="8">8</button>
-            <button type="button" class="operator" value="9">9</button>
-            <button type="button" class="operator" value="0">0</button>
+            <button type="button" class="operator divide-sign" value="/">/</button>
+            <button type="button" class="operator multiply-sign" value="*">x</button>
+            <button type="button" class="operator plus-sign" value="+">+</button>
+            <button type="button" class="operator minus-sign" value="-">-</button>
 
-            <button type="button" class="operator" value=".">.</button>
-            <button type="button" class="operator" value="AC">AC</button>
-            <button type="button" class="operator" value="=">=</button>
+            <button type="button" class="operator num1" value="1">1</button>
+            <button type="button" class="operator num2" value="2">2</button>
+            <button type="button" class="operator num3" value="3">3</button>
+            <button type="button" class="operator num4" value="4">4</button>
+            <button type="button" class="operator num5" value="5">5</button>
+            <button type="button" class="operator num6" value="6">6</button>
+            <button type="button" class="operator num7" value="7">7</button>
+            <button type="button" class="operator num8" value="8">8</button>
+            <button type="button" class="operator num9" value="9">9</button>
+            <button type="button" class="operator num0" value="0">0</button>
 
-
+            <button type="button" class="operator decimal-sign" value=".">.</button>
+            <button type="button" class="operator equal-sign" value="=">=</button>
 
         </div>
     </div>
     
-
     <script src="/main.js"></script>
 </body>
 </html>
