Round out edges of app

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Odin Calculator</h1>
 
     <div class="container">
-        <div class="main-screen"></div>
+        <div class="main-screen">0</div>
         
         <div class="key-wrapper">
 
