--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
             <button type="button" class="operator plus-sign" value="+">+</button>
             <button type="button" class="operator minus-sign" value="-">-</button>
 
-            <button type="button" class="operator num1" value="1">1</button>
-            <button type="button" class="operator num2" value="2">2</button>
-            <button type="button" class="operator num3" value="3">3</button>
-            <button type="button" class="operator num4" value="4">4</button>
-            <button type="button" class="operator num5" value="5">5</button>
-            <button type="button" class="operator num6" value="6">6</button>
-            <button type="button" class="operator num7" value="7">7</button>
-            <button type="button" class="operator num8" value="8">8</button>
-            <button type="button" class="operator num9" value="9">9</button>
-            <button type="button" class="operator num0" value="0">0</button>
+            <button type="button" class="number num1" value="1">1</button>
+            <button type="button" class="number num2" value="2">2</button>
+            <button type="button" class="number num3" value="3">3</button>
+            <button type="button" class="number num4" value="4">4</button>
+            <button type="button" class="number num5" value="5">5</button>
+            <button type="button" class="number num6" value="6">6</button>
+            <button type="button" class="number num7" value="7">7</button>
+            <button type="button" class="number num8" value="8">8</button>
+            <button type="button" class="number num9" value="9">9</button>
+            <button type="button" class="number num0" value="0">0</button>
 
             <button type="button" class="operator decimal-sign" value=".">.</button>
             <button type="button" class="operator equal-sign" value="=">=</button>
