Add updateDisplay() and useOperator()

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button type="button" class="operator ac-sign" value="AC">AC</button>
 
             <button type="button" class="operator divide-sign" value="/">/</button>
-            <button type="button" class="operator multiply-sign" value="*">x</button>
+            <button type="button" class="operator multiply-sign" value="*">*</button>
             <button type="button" class="operator plus-sign" value="+">+</button>
             <button type="button" class="operator minus-sign" value="-">-</button>
 
