Fix classes for operators in html

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         
         <div class="key-wrapper">
 
-            <button type="button" class="operator ac-sign" value="AC">AC</button>
+            <button type="button" class="operator-all-clear ac-sign" value="AC">AC</button>
 
-            <button type="button" class="operator divide-sign" value="/">/</button>
-            <button type="button" class="operator multiply-sign" value="*">*</button>
-            <button type="button" class="operator plus-sign" value="+">+</button>
-            <button type="button" class="operator minus-sign" value="-">-</button>
+            <button type="button" class="operator-data divide-sign" value="/">/</button>
+            <button type="button" class="operator-data multiply-sign" value="*">*</button>
+            <button type="button" class="operator-data plus-sign" value="+">+</button>
+            <button type="button" class="operator-data minus-sign" value="-">-</button>
 
             <button type="button" class="number num1" value="1">1</button>
             <button type="button" class="number num2" value="2">2</button>
@@ -34,8 +34,8 @@
             <button type="button" class="number num9" value="9">9</button>
             <button type="button" class="number num0" value="0">0</button>
 
-            <button type="button" class="operator decimal-sign" value=".">.</button>
-            <button type="button" class="operator equal-sign" value="=">=</button>
+            <button type="button" class="operator-decimal decimal-sign" value=".">.</button>
+            <button type="button" class="operator-equals equal-sign" value="=">=</button>
 
         </div>
     </div>
