--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Odin Calculator</title>
 </head>
 <body>
@@ -40,6 +40,6 @@
         </div>
     </div>
     
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
